Se esta trabajando en el automata finito

--- a/SuffixAutomaton.tex
+++ b/SuffixAutomaton.tex
@@ -27,6 +27,10 @@
 \begin{document}
 	\input{doc/Cover/cover}
 	\input{doc/Introduction/introduction}
+	\input{doc/DirectedGraph/directed-graph}
+	\input{doc/FiniteAutomaton/finite-automaton}
+	\input{doc/SuffixAutomaton/suffix-automaton}
+	\input{doc/Algorithm/algorithm}
 
 	\printglossary[title=Glosario de términos, toctitle=Lista de términos]
 	\input{doc/Bibliography/bibliography}
