--- a/doc/GlossaryTerms/glossary-terms.tex
+++ b/doc/GlossaryTerms/glossary-terms.tex
@@ -1,2 +1,31 @@
 % https://www.overleaf.com/learn/latex/Glossaries
-% https://xlinux.nist.gov/dads/HTML/deterministicAlgorithm.html
+
+\newglossaryentry{endpoints}
+{
+	name=puntos finales,
+	description={Dos vértices conectados por una arista}
+}
+
+\newglossaryentry{symbol}
+{
+	name=símbolo,
+	description={Un dato arbitrario que tiene algún significado o efecto en la máquina. A estos símbolos también se les llama "letras" o "átomos"}
+}
+
+\newglossaryentry{word}
+{
+	name=palabra,
+	description={Una cadena finita formada por la concatenación de un número de símbolos}
+}
+
+\newglossaryentry{alphabet}
+{
+	name=alfabeto,
+	description={Conjunto finito de símbolos. Un alfabeto se indica normalmente con $\Sigma$, que es el conjunto de letras en un alfabeto}
+}
+
+\newglossaryentry{language}
+{
+	name=lenguaje,
+	description={Un conjunto de palabras, formado por símbolos en un alfabeto dado. Puede ser infinito}
+}
