--- a/doc/Bibliography/bibliography.tex
+++ b/doc/Bibliography/bibliography.tex
@@ -1,3 +1,3 @@
 \renewcommand{\refname}{Referencias}
 \bibliographystyle{ieeetr}
-\bibliography{doc/Bibliography/articles,doc/Bibliography/proceedings,doc/Bibliography/books}
+\bibliography{doc/Bibliography/articles,doc/Bibliography/proceedings,doc/Bibliography/books,doc/Bibliography/misc}
