Se agrega la expresion regular del ejemplo del automata finito determinista

--- a/doc/FiniteAutomaton/finite-automaton.tex
+++ b/doc/FiniteAutomaton/finite-automaton.tex
@@ -48,6 +48,15 @@ $M = (Q, \Sigma, q_{0}, \delta, F)$ donde:
 	\label{fig:AFD}
 \end{figure}
 
+El lenguaje reconocido por $L$ es el lenguaje regular dado por la expresión regular: 
+$$
+\wedge(00|11|(01|10)(00|11)*(01|10))*\$
+$$
+
+Cadena de prueba:
+$$
+1001101011001010010001
+$$
 
 % https://en.wikipedia.org/wiki/Deterministic_finite_automaton
 % https://es.wikipedia.org/wiki/Teor%C3%ADa_de_aut%C3%B3matas
