Se agregan terminos al glosario

--- a/doc/Bibliography/misc.bib
+++ b/doc/Bibliography/misc.bib
@@ -4,3 +4,12 @@
    year = "2020",
    url = "\url{https://es.wikipedia.org/w/index.php?title=Aut%C3%B3mata_finito&oldid=130002871}"
 }
+
+@misc{ misc:Biegeleisen2015,
+	author = {Biegeleisen, Tim},
+	booktitle = {stackoverflow},
+	title = {{regex - Regular expression for even number of 0's and even number of 1's - Stack Overflow}},
+	url = {https://stackoverflow.com/questions/29002233/regular-expression-for-even-number-of-0s-and-even-number-of-1s},
+	urldate = {2020-11-22},
+	year = {2015}
+}
