--- a/doc/FiniteAutomaton/finite-automaton.tex
+++ b/doc/FiniteAutomaton/finite-automaton.tex
@@ -9,19 +9,19 @@ Formalmente, un autómata finito es una 5-tupla ($Q, \Sigma, q_{0}, \delta, F$) 
 	\item $F\subseteq Q$ es un conjunto de estados finales o de aceptación.
 \end{itemize}
 
-Un autómata finito determinista (AFD), es un autómata/máquina que tiene un número finito de estados y además es un sistema determinista, es decir, para cada \gls{symbol} de entrada, se puede determinar el estado al que se moverá el autómata \cite{wiki:Automata_finito}. 
+Un \acrfull{AFD}, es un autómata/máquina que tiene un número finito de estados y además es un sistema determinista, es decir, para cada \gls{symbol} de entrada, se puede determinar el estado al que se moverá el autómata \cite{wiki:Automata_finito}. 
 
-Un AFD está representado por un grafo dirigido llamado diagrama de estado.
+Un \acrshort{AFD} está representado por un grafo dirigido llamado diagrama de estado.
 
 \begin{itemize}
 	\item Los estados son representados por vértices o nodos $Q = \{ S_1, S_2, S_3, \dots \}$.
-	\item Las aristas o arcos etiquetados con un \gls{alphabet} $\Sigma = \{ 0, 1 \}$, representan las transiciones, $\delta(S_1,0)=S_3, \delta(S_1,1)=S_2, \delta\dots$.
+	\item Las aristas o arcos etiquetados con un \gls{alphabet} $\Sigma$, representan las transiciones $\delta$.
 	\item El estado inicial $q_{0}$ se denota por una sola arista entrante vacía.
 	\item El o los estados finales $F$ están indicados por círculos dobles.
 \end{itemize}
 
 \subsection{Ejemplo}
-El siguiente ejemplo es de un AFD $L$, con un alfabeto binario, que reconoce el lenguaje regular conformado exclusivamente por las cadenas con un número par de ceros y un número par de unos.
+El siguiente ejemplo es de un \acrshort{AFD} $L$, con un alfabeto binario, que reconoce el lenguaje regular conformado exclusivamente por las cadenas con un número par de ceros y un número par de unos.
 
 $M = (Q, \Sigma, q_{0}, \delta, F)$ donde:
 \begin{itemize}
@@ -48,9 +48,9 @@ $M = (Q, \Sigma, q_{0}, \delta, F)$ donde:
 	\label{fig:AFD}
 \end{figure}
 
-El lenguaje reconocido por $L$ es el lenguaje regular dado por la expresión regular: 
+El lenguaje reconocido por $L$ es el lenguaje regular dado por la expresión regular \cite{misc:Biegeleisen2015}: 
 $$
-\wedge(00|11|(01|10)(00|11)*(01|10))*\$
+^\wedge(00|11|(01|10)(00|11)^\ast(01|10))^\ast \$
 $$
 
 Cadena de prueba:
