--- a/doc/SuffixAutomaton/suffix-automaton.tex
+++ b/doc/SuffixAutomaton/suffix-automaton.tex
@@ -1,7 +1,12 @@
 \section{Autómata de sufijo}\label{SuffixAutomaton}
-En el contexto de la teoría de autómatas, un autómata de sufijo es el autómata finito determinista
+En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} dada.
+
+\gls{substring}
+\gls{prefix}
+\gls{suffix}
 
 \subsection{Propiedades}
 
 % https://en.wikipedia.org/wiki/Suffix_automaton
 % https://es.qaz.wiki/wiki/Suffix_automaton
+
