Se agrega la definicion formal de la funcion de transicion

--- a/doc/Bibliography/misc.bib
+++ b/doc/Bibliography/misc.bib
@@ -5,6 +5,13 @@
    url = "\url{https://es.wikipedia.org/w/index.php?title=Aut%C3%B3mata_finito&oldid=130002871}"
 }
 
+@misc{ wiki:Suffix_automaton,
+	author = "{Wikipedia contributors}",
+	title = "Suffix automaton --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2020",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Suffix_automaton&oldid=990092781}"
+}
+
 @misc{ misc:Biegeleisen2015,
 	author = {Biegeleisen, Tim},
 	booktitle = {stackoverflow},
