--- a/doc/FiniteAutomaton/finite-automaton.tex
+++ b/doc/FiniteAutomaton/finite-automaton.tex
@@ -18,6 +18,7 @@ Un \acrshort{AFD} está representado por un grafo dirigido llamado diagrama de e
 	\item Las aristas o arcos etiquetados con un \gls{alphabet} $\Sigma$, representan las transiciones $\delta$.
 	\item El estado inicial $q_{0}$ se denota por una sola arista entrante vacía.
 	\item El o los estados finales $F$ están indicados por círculos dobles.
+	\item Cada transición se escribe  $\delta ( q_1, \sigma ) = q_2$,  también se puede denotar como $q_1 \xrightarrow{\sigma} q_2$.
 \end{itemize}
 
 \subsection{Ejemplo}
