--- a/doc/SuffixAutomaton/suffix-automaton.tex
+++ b/doc/SuffixAutomaton/suffix-automaton.tex
@@ -1,5 +1,5 @@
 \section{Autómata de sufijo}\label{SuffixAutomaton}
-En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} dada.
+En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} dada \cite{wiki:Suffix_automaton}.
 
 \gls{substring}
 \gls{prefix}
