Se agregan enlaces de referencia

--- a/doc/SuffixAutomaton/suffix-automaton.tex
+++ b/doc/SuffixAutomaton/suffix-automaton.tex
@@ -1,5 +1,5 @@
 \section{Autómata de sufijo}\label{SuffixAutomaton}
-En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} dada \cite{wiki:Suffix_automaton}.
+En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} $S  = s_1 s_2 s_3 \dots s_n $ \cite{wiki:Suffix_automaton}.
 
 \gls{substring}
 \gls{prefix}
@@ -9,4 +9,8 @@ En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrsho
 
 % https://en.wikipedia.org/wiki/Suffix_automaton
 % https://es.qaz.wiki/wiki/Suffix_automaton
-
+% https://codeforces.com/blog/entry/20861
+% https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/35395.pdf
+% https://stackoverflow.com/questions/24411000/what-is-a-suffix-automaton
+% https://akshay.jaggi.co/blog/suffix-automata/
+% https://saisumit.wordpress.com/2016/01/26/suffix-automaton/
