Trabajando en el algoritmo

--- a/doc/FiniteAutomaton/finite-automaton.tex
+++ b/doc/FiniteAutomaton/finite-automaton.tex
@@ -54,7 +54,7 @@ $$
 ^\wedge(00|11|(01|10)(00|11)^\ast(01|10))^\ast \$
 $$
 
-Cadena de prueba:
+La Figura \ref{fig:AFD} da un ejemplo de un autómata simple $M$ que acepta la cadena:
 $$
 1001101011001010010001
 $$
