--- a/doc/SuffixAutomaton/suffix-automaton.tex
+++ b/doc/SuffixAutomaton/suffix-automaton.tex
@@ -1,11 +1,14 @@
 \section{Autómata de sufijo}\label{SuffixAutomaton}
-En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrshort{AFD} que reconoce el conjunto se sufijos de una \gls{string} $S  = s_1 s_2 s_3 \dots s_n $ \cite{wiki:Suffix_automaton}.
+Un autómata de sufijo es una estructura de datos eficiente y compacta, también conocido como Directed Acyclic Word Graph (DAWG), es el \acrshort{AFD} mínimo, que reconoce el conjunto de sufijos de una \gls{string} $S  = s_1 s_2 s_3 \dots s_n $ \cite{wiki:Suffix_automaton}, es decir, se puede usar un autómata sufijo para determinar si una \gls{string} $x$ es una \gls{substring} en tiempo lineal en su longitud $O(| x |)$ \cite{article:10.1016/j.tcs.2009.03.034}.
 
-\gls{substring}
+
 \gls{prefix}
 \gls{suffix}
 
 \subsection{Propiedades}
+
+\subsubsection{Endpos}
+
 
 % https://en.wikipedia.org/wiki/Suffix_automaton
 % https://es.qaz.wiki/wiki/Suffix_automaton
@@ -14,3 +17,10 @@ En el contexto de la teoría de autómatas, un autómata de sufijo es el \acrsho
 % https://stackoverflow.com/questions/24411000/what-is-a-suffix-automaton
 % https://akshay.jaggi.co/blog/suffix-automata/
 % https://saisumit.wordpress.com/2016/01/26/suffix-automaton/
+% https://discuss.codechef.com/t/plant-editorial/45402
+% https://cp-algorithms.com/string/suffix-automaton.html
+% https://onlinejudge.org/index.php?option=onlinejudge&page=show_problem&problem=660
+% https://sites.google.com/site/indy256/algo/suffix_automaton
+% http://kiritow.com:3000/Kiritow/OJ-Problems-Source/src/e11349a42b5ca8a65621ba9cff78315deb482c15/.ACM-Templates/Data-Structures/suffix-automaton/main.cpp
+% https://github.com/sourabh2311/Competitive-Programming/blob/master/SPOJ_NSUBSTR.cpp
+% https://github.com/sourabh2311/Competitive-Programming/blob/master/UVA_719.cpp
