Se agrega el pseudocodigo

--- a/SuffixAutomaton.tex
+++ b/SuffixAutomaton.tex
@@ -1,9 +1,11 @@
 \documentclass[9pt, spanish]{entcs}
+\usepackage{entcsmacro}
 
 % Spanish accents
 \usepackage[spanish]{babel}
 \selectlanguage{spanish}
 \usepackage[utf8]{inputenc}
+
 
 % The mathtools package
 % http://texdoc.net/texmf-dist/doc/latex/mathtools/mathtools.pdf
