--- a/doc/Bibliography/books.bib
+++ b/doc/Bibliography/books.bib
@@ -4,3 +4,17 @@
 	year={2011},
 	publisher={Cambridge University Press}
 }
+
+@Inbook{book:Crochemore1997,
+	author={Crochemore, Maxime and Hancart, Christophe},
+	title="Automata for Matching Patterns",
+	bookTitle="Handbook of Formal Languages: Volume 2. Linear Modeling: Background and Application",
+	year="1997",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="399--462",
+	abstract="This chapter describes several methods of word pattern matching that are based on the use of automata.",
+	isbn="978-3-662-07675-0",
+	doi="10.1007/978-3-662-07675-0_9",
+	url="https://doi.org/10.1007/978-3-662-07675-0_9"
+}
