--- a/doc/Bibliography/misc.bib
+++ b/doc/Bibliography/misc.bib
@@ -12,11 +12,19 @@
 	url = "\url{https://en.wikipedia.org/w/index.php?title=Suffix_automaton&oldid=990092781}"
 }
 
-@misc{ misc:Biegeleisen2015,
+@misc{ stackoverflow:Biegeleisen2015,
 	author = {Biegeleisen, Tim},
 	booktitle = {stackoverflow},
 	title = {{regex - Regular expression for even number of 0's and even number of 1's - Stack Overflow}},
 	url = {https://stackoverflow.com/questions/29002233/regular-expression-for-even-number-of-0s-and-even-number-of-1s},
 	urldate = {2020-11-22},
 	year = {2015}
+}
+
+@misc{ youtube:Automatas_de_Sufijos,
+	title = {Autómatas de Sufijos},
+	date = {2020},
+	organization = {Youtube},
+	author = {Semillero Algoritmos PUJ Cali},
+	url = "\url{https://www.youtube.com/watch?v=a4eeOYIRDsw}",
 }
