--- a/doc/FiniteAutomaton/finite-automaton.tex
+++ b/doc/FiniteAutomaton/finite-automaton.tex
@@ -49,7 +49,7 @@ $M = (Q, \Sigma, q_{0}, \delta, F)$ donde:
 	\label{fig:AFD}
 \end{figure}
 
-El lenguaje reconocido por $L$ es el lenguaje regular dado por la expresión regular \cite{misc:Biegeleisen2015}: 
+El lenguaje reconocido por $L$ es el lenguaje regular dado por la expresión regular \cite{stackoverflow:Biegeleisen2015}: 
 $$
 ^\wedge(00|11|(01|10)(00|11)^\ast(01|10))^\ast \$
 $$
