--- a/entcsmacro.sty
+++ b/entcsmacro.sty
@@ -1,72 +1,3 @@
-% Macro file for Electronic Notes in Theoretical Computer Science.
-% Adopted from document-style for journals published by Elsevier Science. 
-% To be used with LaTeX version 2.09 of 14 January 1992 (or later) 
-%
-% Version: 1.10
-% Date:    13 February 1998
-%
-% Copyright (C) 1998. All rights reserved.
-%
-% IMPORTANT NOTICE:
-%
-% You are not allowed to change this file. You may however copy this file 
-% to a file with a different name and then change the copy. 
-% 
-% You are NOT ALLOWED to distribute this file alone. You are NOT ALLOWED 
-% to take money for the distribution or use of this file (or a changed 
-% version) except for a nominal charge for copying etc. 
-% 
-% You are allowed to distribute this file under the condition that it is 
-% distributed together with all files mentioned in readme.els. 
-% 
-% If you receive only some of these files from someone, complain! 
-% 
-%
-
-\headheight 10pt
-\headsep 20pt
-\footskip 20pt
-\setlength{\topmargin}{-30pt}
-\addtolength{\textheight}{25pt} 
-
-\def\labelenumi{\rm\normalshape (\theenumi)}     
-\def\labelenumii{\rm\normalshape (\theenumii)}
-
-\font\eightrm=cmr8 scaled\magstep1
-\font\eightbf=cmbx8 scaled\magstep1
-\font\eighttt=cmtt8 scaled\magstep1
-\font\eightit=cmsl10
-\font\sixrm=cmr6 scaled\magstep1
-\font\bfone=cmbx10 scaled\magstep2
-\font\smc=cmcsc10 scaled\magstep1
-\font\sc=cmcsc10 
-
-\def\date{\ifcase\month\or January\or February \or March\or April\or May
-\or June\or July\or August\or September\or October\or November
-\or December\fi\space\number\day, \number\year}
-
-\volume{NN}
-\def\volu{NN}
-\journal{Electronic Notes in Theoretical Computer Science}
-\def\jour{Electronic Notes in Theoretical Computer Science}
-\def\vol{NN}
-
-\def\rightheadline{\ifnum\value{page}=\hypergetpageref{FirstPage}\firstheadline
-      \else\hfill\sc\lastname\hfill\fi}    
-\def\leftheadline{\hfill\sc\lastname\hfill}
-
-\def\firstheadline{\vbox{\baselineskip=9pt \parindent 0pt \obeylines
-    Replace this file with \texttt{prentcsmacro.sty} for your
-    meeting, or with \texttt{entcsmacro.sty} for your meeting.\\
-    Both can be found through links on the \href{http://entcs.org}
-    {ENTCS Web Page}.}}
-    
-
-\def\firstfootline{\hfill
-  \eightit \copyright \annum\ Published by Elsevier Science B.~V.\hfill}
-
-\pagestyle{headings}
-
 % THE NEXT LINES GIVE DEFINITIONS FOR THE THEOREM ENVIRONMENTS.
 % EACH IS VIEWED AS A theorem environment IN THE SENSE OF LaTeX.
 % THEIR NAMES ARE: Theorem, Proposition, Lemma, Corollary, Proposition,
@@ -81,7 +12,8 @@
 
 \newenvironment{theorem}{\vspace{-\lastskip}\par\addvspace{.6pc plus
     .2pc minus .1pc}\begin{thm}}{\end{thm}\par\addvspace{.6pc plus
-    .2pc minus .1pc}} \newenvironment{lemma}{\vspace{-\lastskip}\par
+    .2pc minus .1pc}} 
+\newenvironment{lemma}{\vspace{-\lastskip}\par
   \addvspace{.6pc plus .2pc minus .1pc}\begin{lem}}
   {\end{lem}\par\addvspace{.6pc plus .2pc minus .1pc}}
 \newenvironment{corollary}{\vspace{-\lastskip}\par \addvspace{.6pc
@@ -130,3 +62,26 @@
 \newenvironment{proof*}{\begin{pf*}}{\qed\end{pf*}}
 
 %% END OF `entcsmacro.sty'%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% \renewtheorem command
+\makeatletter
+\def\renewtheorem#1{%
+	\expandafter\let\csname#1\endcsname\relax
+	\expandafter\let\csname c@#1\endcsname\relax
+	\gdef\renewtheorem@envname{#1}
+	\renewtheorem@secpar
+}
+\def\renewtheorem@secpar{\@ifnextchar[{\renewtheorem@numberedlike}{\renewtheorem@nonumberedlike}}
+\def\renewtheorem@numberedlike[#1]#2{\newtheorem{\renewtheorem@envname}[#1]{#2}}
+\def\renewtheorem@nonumberedlike#1{  
+	\def\renewtheorem@caption{#1}
+	\edef\renewtheorem@nowithin{\noexpand\newtheorem{\renewtheorem@envname}{\renewtheorem@caption}}
+	\renewtheorem@thirdpar
+}
+\def\renewtheorem@thirdpar{\@ifnextchar[{\renewtheorem@within}{\renewtheorem@nowithin}}
+\def\renewtheorem@within[#1]{\renewtheorem@nowithin[#1]}
+\makeatother
+
+% Spanish
+\renewtheorem{thm}{Teorema}[section]
+\renewtheorem{alg}{Algoritmo}[section]
