Trabajando en la propiedad endpos

--- a/doc/Bibliography/misc.bib
+++ b/doc/Bibliography/misc.bib
@@ -28,3 +28,10 @@
 	author = {Semillero Algoritmos PUJ Cali},
 	url = "\url{https://www.youtube.com/watch?v=a4eeOYIRDsw}",
 }
+
+@misc{ web:suffix-automata,
+	author = "{Akshay Jaggi}",
+	title = "Suffix Automata",
+	year = "2016",
+	url = "\url{https://akshay.jaggi.co/blog/suffix-automata}"
+}
