--- a/doc/Cover/cover.tex
+++ b/doc/Cover/cover.tex
@@ -20,6 +20,6 @@
 	\end{abstract}
 
 	\begin{keyword}
-		
+		autómata finito, autómata de sufijo, coincidencia de cadenas.
 	\end{keyword}
 \end{frontmatter}
