--- a/doc/GlossaryTerms/glossary-terms.tex
+++ b/doc/GlossaryTerms/glossary-terms.tex
@@ -23,14 +23,14 @@
 \newglossaryentry{substring}
 {
 	name=subcadena,
-	description={Una subcadena (segmento, subpalabra o factor) de una cadena es cualquier secuencia de símbolos consecutivos que aparecen en la cadena. En lenguaje formal, $t$ es una subcadena de $T$ sí y sólo si existe $x, y \in \Sigma^\ast$ tal que $T = xty$
+	description={Una subcadena (segmento, subpalabra o factor) de una cadena es cualquier secuencia de símbolos consecutivos que aparecen en la cadena. En lenguaje formal, $t$ es una subcadena de $S$ sí y sólo si existe $x, y \in \Sigma^\ast$ tal que $S = xty$
 	}
 }
 
 \newglossaryentry{prefix}
 {
 	name=prefijo,
-	description={Un prefijo es una subcadena que aparece al principio de una cadena. Formalmente, $t$ es un prefijo de $T$ sí y sólo hay algún $y \in \Sigma^\ast$ tal que $T = ty$}
+	description={Un prefijo es una subcadena que aparece al principio de una cadena. Formalmente, $t$ es un prefijo de $S$ sí y sólo hay algún $y \in \Sigma^\ast$ tal que $S = ty$}
 }
 
 \newglossaryentry{suffix}
