--- a/entcsmacro.sty
+++ b/entcsmacro.sty
@@ -157,3 +157,7 @@
 % Spanish
 \renewtheorem{thm}{Teorema}[section]
 \renewtheorem{alg}{Algoritmo}[section]
+\renewtheorem{defn}{Definición}[section]
+\renewtheorem{exmp}{Ejemplo}[section]
+\renewtheorem{lem}{Lema}[section]
+\renewtheorem{pf}{Demostración}[section]
