--- a/doc/Algorithm/algorithm.tex
+++ b/doc/Algorithm/algorithm.tex
@@ -11,7 +11,7 @@
 			\State $(Q, E) \leftarrow (\varnothing, \varnothing)$
 			\State $i \leftarrow$ State-Creation
 			\State $Length[i] \leftarrow 0$
-			\State $F[i] \leftarrow$ NIL
+			\State $F[i] \leftarrow$ UNDEFINED
 			\State $last \leftarrow i$
 			
 			\For{$\ell$ from 1 up to $|x|$}
@@ -21,12 +21,12 @@
 			\State $T \leftarrow \varnothing$
 			\State $p \leftarrow last$
 			
-			\While{$p \neq$ NIL}
+			\While{$p \neq$ UNDEFINED}
 				\State $T \leftarrow T + \{p\}$
 				\State $p \leftarrow F[p]$
 			\EndWhile
 			
-			\Return (( Q, i, T, E ), Length, F)		
+			\State \Return (( Q, i, T, E ), Length, F)		
 		\EndFunction
 		
 	\end{algorithmic}
@@ -43,12 +43,12 @@
 			\State $Length[newlast] \leftarrow Length[last]+1$
 			\State $p \leftarrow last$
 
-			\While{$p \neq$ NIL and $\delta(p, a)$ $=$ NIL}
+			\While{$p \neq$ UNDEFINED and $\delta(p, a)$ $=$ UNDEFINED}
 				\State  $E \leftarrow E + \{(p, a, newlast)\}$
 				\State  $p \leftarrow F[p]$
 			\EndWhile
 
-			\If{$p = $ NIL}
+			\If{$p = $ UNDEFINED}
 				\State $F[newlast] \leftarrow i$
 			
 			\Else
@@ -59,14 +59,14 @@
 				
 				\Else
 					\State $q' \leftarrow$ State-Creation
-					\For{each letter $b$ such that $\delta(q, b) \neq$ NIL}
+					\For{each letter $b$ such that $\delta(q, b) \neq$ UNDEFINED}
 						\State  $E \leftarrow E + \{(q', b, \delta(q, b))\}$
 					\EndFor
 					\State $Length[q'] \leftarrow Length[p]+1$
 					\State $F[newlast] \leftarrow q'$
 					\State $F[q'] \leftarrow F[q]$
 					\State $F[q] \leftarrow q'$
-					\While{$p \neq$ NIL and $\delta(p, a) = q$}
+					\While{$p \neq$ UNDEFINED and $\delta(p, a) = q$}
 						\State  $E \leftarrow E - \{(p, a, q)\} + \{(p, a, q')\}$
 						\State  $p \leftarrow F[p]$
 					\EndWhile
