Se agrega la propiedad Suffix Link

--- a/doc/Application/application.tex
+++ b/doc/Application/application.tex
@@ -21,4 +21,4 @@
 	stringstyle=\color{red}, % string color
 	xleftmargin=\marginparsep
 }
-\lstinputlisting[label=SuffixAutomaton, caption=Caption, language=C++]{doc/Application/code/GlassBeads.cpp}
+\lstinputlisting[label=SuffixAutomaton, caption=Autómata de sufijo para la solcuión del problema UVA 719 - Glass Beads, language=C++]{doc/Application/code/GlassBeads.cpp}
