--- a/doc/Bibliography/misc.bib
+++ b/doc/Bibliography/misc.bib
@@ -35,3 +35,10 @@
 	year = "2016",
 	url = "\url{https://akshay.jaggi.co/blog/suffix-automata}"
 }
+
+@misc{ web:cp-suffix-automaton,
+	author = "{CP-Algorithms}",
+	title = "Suffix Automaton",
+	year = "2020",
+	url = "\url{https://cp-algorithms.com/string/suffix-automaton.html}"
+}
