Trabajando en la aplicacion del automata de sufijo

--- a/doc/Application/application.tex
+++ b/doc/Application/application.tex
@@ -1,4 +1,7 @@
 \section{Aplicación}\label{Application}
+Un autómata de sufijo se puede utilizar para contar el número de \glspl{substring} distintas que se producen en una \gls{string} determinada, también en el reconocimiento de voz, la compresión de datos, tareas de extracción de información e identificación musical y emparejamiento en secuencias del genoma \cite{wiki:Suffix_automaton}.
+
+\subsection{UVA 719 - Glass Beads}
 
 \begin{figure}[H]
 	\centering
