--- a/doc/Cover/cover.tex
+++ b/doc/Cover/cover.tex
@@ -16,7 +16,7 @@
 
 	\renewcommand{\abstractname}{\textbf{Resumen}}
 	\begin{abstract}
-		
+		Un autómata de sufijo es una estructura de datos eficiente y compacta, para representar el índice completo de un conjunto de cadenas. Es el autómata determinista mínimo que reconoce el conjunto de sufijos o subcadenas de un conjunto de cadenas, y se puede utilizar para búsqueda de patrones en textos. Este documento presenta definiciones y terminología de cadenas y autómatas, con una aplicación práctica que permite comprender de forma eficaz la eficiencia del algoritmo.
 	\end{abstract}
 
 	\begin{keyword}
