--- a/doc/GlossaryTerms/glossary-terms.tex
+++ b/doc/GlossaryTerms/glossary-terms.tex
@@ -36,7 +36,7 @@
 \newglossaryentry{suffix}
 {
 	name=sufijo,
-	description={Un sufijo es una subcadena que aparece al final de una cadena. Formalmente, $t$ es un sufijo de $T$ sí y sólo hay algún $x \in \Sigma^\ast$ tal que $T = xt$}
+	description={Un sufijo es una subcadena que aparece al final de una cadena. Formalmente, $t$ es un sufijo de $S$ sí y sólo hay algún $x \in \Sigma^\ast$ tal que $S = xt$}
 }
 
 % http://www.m-hikari.com/ams/ams-2014/ams-125-128-2014/singhAMS125-128-2014.pdf
