--- a/doc/Introduction/introduction.tex
+++ b/doc/Introduction/introduction.tex
@@ -1,2 +1,4 @@
 \section{Introducción}\label{Introduction}
-% autómata finito determinista
+En ciencias de la computación, un autómata de sufijo es una estructura de datos que reconoce el conjunto de sufijos de una \gls{string}, es decir, contiene información sobre todas las \glspl{substring} de la \gls{string} dada. Es importante tener en cuenta que si se realiza la correcta implementación del algoritmo se puede garantizar la linealidad en el consumo de memoria, haciendo un uso racional y eficiente de los recursos computacionales.
+
+El documento está organizado de la siguiente manera. Sección 2 se realiza una breve explicación sobre grafos dirigidos. En la Sección 3 se introduce las definiciones y la terminología de cadenas y autómatas. La Sección 4 aborda el autómata de sufijo con sus principales propiedades. Sección 5 da detalles para la construcción del algoritmo incluido pseudocódigo. Finalmente, en la Sección 6 se muestra la solución de un problema de UVA usando el autómata de sufijo.
